Fix render.yaml and confirm gunicorn app target

--- a/render.yaml
+++ b/render.yaml
@@ -1,7 +1,7 @@
 services:
   - type: web
     name: family-budget-app
-    env: python
+    runtime: python
     buildCommand: ""
     startCommand: gunicorn app:app
     plan: free
